# R-Type

./: .gitignore  Doxyfile  LICENSE  README.md  install.bat  install.sh
.github/workflows/: cpp-linter.yml  mirroring.yml  release.yml
CMAKEECS/: CMakeLists.txt  client.cpp  server.cpp
CMAKEECS/include/: Client.hpp  Components.hpp  GameEngine.hpp  Registry.hpp  Scene.hpp  Systems.hpp
CMAKEECS/src/: GameEngine.cpp  Scene.cpp  position_system.cpp  serialize_components.cpp
ECS/: Makefile  ecs  main.cpp
ECS/src/: main.cpp
ECS/src/Components/: Components.hpp
ECS/src/GameEngine/: GameEngine.cpp  GameEngine.hpp
ECS/src/Registry/: Registry.hpp
ECS/src/Systems/: Systems.hpp  collide_system.cpp  draw_system.cpp  onclickloadscene_system.cpp  quit_system.cpp  shoot_system.cpp
GameEngineLib/: CMakeLists.txt
GameEngineLib/include/: Client.hpp  Components.hpp  Registry.hpp  Scene.hpp  Server.hpp  Systems.hpp  TexturesLoader.hpp  parsing.hpp
GameEngineLib/src/: Entity.cpp  GameEngine.cpp  Scene.cpp  Server.cpp  TexturesLoader.cpp  addforce_system.cpp  boxcollider_system.cpp  collide_system.cpp  controller_system.cpp  draw_system.cpp  gravity_system.cpp  on_collide_load_scene.cpp  onclickloadscene_system.cpp  oncollidestop_system.cpp  parralax_system.cpp  parsing.cpp  position_system.cpp  quit_system.cpp  serialize_components.cpp  showcollisionswithinput_system.cpp  sound_system.cpp  spawn_at_random_position_system.cpp  spawnwithinput_system.cpp  text_system.cpp
PLEASE/: CMakeLists.txt  Doxyfile  client.cpp  server.cpp
PLEASE/GameEngineLib/: CMakeLists.txt
PLEASE/GameEngineLib/include/: Components.hpp  Entity.hpp  GameEngine.hpp  Registry.hpp  ServerClient.hpp  Systems.hpp  TexturesLoader.hpp
PLEASE/GameEngineLib/src/: GameEngine.cpp  Scene.cpp  controller_system.cpp  gravity_system.cpp  on_collide_load_scene.cpp  onclickloadscene_system.cpp  oncollidestop_system.cpp  showcollisionswithinput_system.cpp  text_system.cpp
PLEASE/Runner/: CMakeLists.txt  runner.cpp
PLEASE/include/: Components.hpp  GameEngine.hpp  Registry.hpp  Server.hpp  ServerClient.hpp  SparseArray.hpp  Systems.hpp  TexturesLoader.hpp
PLEASE/src/: Entity.cpp  GameEngine.cpp  Scene.cpp  Server.cpp  collide_system.cpp  controller_system.cpp  draw_system.cpp  gravity_system.cpp  position_system.cpp  spawnwithinput_system.cpp
R-Type/: CMakeLists.txt  client.cpp  server.cpp
Runner/: CMakeLists.txt  runner.cpp
client/: CMakeLists.txt  Makefile  client  main.cpp  trash.txt
client/src/: main.cpp
client/src/Client/: Client.hpp
client/src/Game/: Game.cpp  Game.hpp
client/src/Menu/: Menu.cpp  Menu.hpp
client/src/Object/: Object.cpp  Object.hpp
clientV2/: Makefile
clientV2/src/Client/: Client.hpp
clientV2/src/Game/: Game.cpp  Game.hpp
clientV2/src/Menu/: Menu.cpp  Menu.hpp
clientV2/src/Object/: Object.cpp  Object.hpp
final/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  game  game.cpp
final/include/: Client.hpp  Components.hpp  Entity.hpp  GameEngine.hpp  Registry.hpp  ServerClient.hpp  SparseArray.hpp  Systems.hpp
final/src/: Entity.cpp  GameEngine.cpp  Scene.cpp  animation_system.cpp  collide_system.cpp  controller_system.cpp  draw_system.cpp  gravity_system.cpp  onclickloadscene_system.cpp  position_system.cpp  quit_system.cpp  serialize_components.cpp  sound_system.cpp  spawnwithinput_system.cpp
mvp/client/: client
mvp/client/src/Client/: Client.hpp
mvp/client/src/Game/: Game.hpp
mvp/client/src/Object/: Object.cpp
mvp/server/: Makefile  server
mvp/server/src/: main.cpp
mvp/server/src/Client/: Client.hpp
mvp/server/src/Components/: Components.hpp
mvp/server/src/Game/: Game.cpp  Game.hpp
mvp/server/src/Server/: Server.cpp
mvp/server/src/SparseArray/: SparseArray.hpp
mvp/server/src/Systems/: Systems.hpp  control_system.cpp  position_system.cpp  serialize_system.cpp
server/: CMakeLists.txt  Makefile  server
server/src/Client/: Client.hpp
server/src/Components/: Components.hpp
server/src/Entity/: Entity.cpp  Entity.hpp
server/src/Game/: Game.cpp  Game.hpp
server/src/Registry/: Registry.hpp
server/src/Server/: Server.cpp  Server.hpp
server/src/Systems/: Systems.hpp  control_system.cpp  position_system.cpp  serialize_system.cpp  shoot_system.cpp
